--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <h1>中醫問診（依《傷寒論》）</h1>
+  <h2>Hello</h2>
   <form id="diagnosisForm">
     <div class="symptom-list">
       <label><input type="checkbox" name="symptom" value="發熱"> 發熱</label><br>
