--- a/index.html
+++ b/index.html
@@ -794,7 +794,12 @@
             "麻黃湯": ["麻黃", "桂枝", "杏仁", "甘草"],
             "白虎湯": ["石膏", "知母", "甘草", "粳米"],
             "小柴胡湯": ["柴胡", "黃芩", "人參", "甘草", "半夏", "生薑", "大棗"],
-            "理中湯": ["人參", "白朮", "甘草", "乾薑"]
+            "理中湯": ["人參", "白朮", "甘草", "乾薑"],
+            "葛根湯": ["葛根", "麻黃", "桂枝", "芍藥", "甘草", "生薑", "大棗"],
+            "小青龍湯": ["麻黃", "桂枝", "芍藥", "甘草", "乾薑", "細辛", "五味子", "半夏"],
+            "大承氣湯": ["大黃", "厚朴", "枳實", "芒硝"],
+            "小承氣湯": ["大黃", "厚朴", "枳實"],
+            "陽旦湯": ["桂枝", "芍藥", "甘草", "生薑", "大棗", "黃芩"]
         };
 
         const ingredients = formulaIngredients[formula]?.join(", ") || "無配方資料";
@@ -884,7 +889,8 @@
             "葛根湯": ["葛根", "麻黃", "桂枝", "芍藥", "甘草", "生薑", "大棗"],
             "小青龍湯": ["麻黃", "桂枝", "芍藥", "甘草", "乾薑", "細辛", "五味子", "半夏"],
             "大承氣湯": ["大黃", "厚朴", "枳實", "芒硝"],
-            "小承氣湯": ["大黃", "厚朴", "枳實"]
+            "小承氣湯": ["大黃", "厚朴", "枳實"],
+            "陽旦湯": ["桂枝", "芍藥", "甘草", "生薑", "大棗", "黃芩"]
         };
 
         const ingredients = formulaIngredients[formula]?.join(", ") || "無配方資料";
